# nutrition-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
nutrition-pro/: MEMORY_TEMPLATE.md  ONBOARDING.md  SKILL.md
nutrition_cli/: __init__.py  __main__.py  config.py  format.py  log.py  openfoodfacts.py  rda.py  search.py  usda.py
skill/: SKILL.md
tests/: test_format.py  test_log.py  test_openfoodfacts.py  test_search.py  test_usda.py
