[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrition-cli"
version = "1.0.0"
description = "CLI tool for nutrition data lookup from USDA and Open Food Facts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
nutrition = "nutrition_cli.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
]
